[project]
name = "webdnn"
version = "2.0.0"
description = "WebDNN: ONNX inference runtime for web browsers (graph transpiler / optimizer)"
requires-python = ">=3.10"
dependencies = ["numpy"]
authors = [{ name = "Masatoshi Hidaka" }]
license = { text = "MIT" }
keywords = ["deep-neural-networks", "accelerate", "optimization", "javascript", "webgpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/mil-tokyo/webdnn"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/graph_transpiler"]

[tool.setuptools.package-data]
"*" = ["*.js"]
